##Text encoding: utf-8

2007-10-23 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac: Fixed AC_CONFIG_FILES and AC_OUTPUT usage.

2007-10-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* Makefile.am (MAINTAINERCLEANFILES): Remove gnome-doc-utils.make
	too.

2007-10-14 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* programs/3d/gchem3d-viewer.desktop.in: Added Version field to
	declare spec version compliance.
	* programs/calc/gchemcalc.desktop.in: Ditto.
	* programs/crystal/gcrystal.desktop.in: Ditto.
	* programs/table/gchemtable.desktop.in: Ditto.

2007-10-14 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac: Fix indentation in help output.
	* gcu.pc.in: Added URL field.
	* programs/3d/gchem3d-viewer.desktop.in: Fixed to be compliant to
	latest specification.
	* programs/calc/gchemcalc.desktop.in: Ditto.
	* programs/table/gchemtable.desktop.in: Ditto.
	* programs/crystal/Makefile.am: Improved format.
	(DEFS): Removed unused PKGDATADIR.
	(schemasdir): Don't ignore GCONF_SCHEMA_FILE_DIR.

2007-09-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.8.4).

2007-09-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: rewrote the mozilla plugin related stuff
	so that it also works with iceweasel.

2007-09-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/Makefile.am: fix use of --disable-schemas-install
	[#20943].

2007-08-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.8.3).
	* gcu/application.cc: never try using nautilus as an
	help viewer.

2007-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/3d/C/gchem3d-viewer.xml: fixed documentation
	version.
	* docs/help/calc/C/gchemcalc.xml: ditto.
	* docs/help/crystal/C/gcrystal.xml: ditto.
	* docs/help/table/C/gchemtable.xml: ditto.
	* gcu/application.cc: don't call gtk_main_quit before
	gtk_main.
	* gcu/application.h: ditto.
