@@ -141,7 +141,7 @@ AC_TRY_COMPILE(
 # Check for xulrunner plugin
 ##################################################
 xulclient=
-for pack in xulrunner firefox mozilla; do
+for pack in xulrunner seamonkey firefox mozilla; do
   if test "x$xulclient" = x; then
     if pkg-config --exists $pack-plugin; then
       xulclient=$pack-plugin
